err/ginvoke.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ginvoke'...
Listing './lib/python3.5/site-packages/ginvoke/data'...
Listing './lib/python3.5/site-packages/ginvoke/data/pixmaps'...
Compiling './lib/python3.5/site-packages/ginvoke/settings.py'...
***   File "./lib/python3.5/site-packages/ginvoke/settings.py", line 58
    exec co in context
          ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/ginvoke/ui'...
Listing './lib/python3.5/site-packages/ginvoke-0.4.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/ginvoke'...
Listing './share/ginvoke/examples'...
Listing './share/pixmaps'...
Listing './share/python-wheels'...
